examples/type_system/failing/203_hm_time_caller_missing_io_e400.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/203_hm_time_caller_missing_io_e400.flx
// error[E400]: Missing Ambient Effect
//
// Call to `log_event` requires effect `Console` in this function signature.
//
//   examples/type_system/failing/203_hm_time_caller_missing_io_e400.flx:31:5
//    |
// 31 |     log_event("recorded")
//    |     ^^^^^^^^^
//    |     --------- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// E400: a `with Time` function calls a function that requires IO.
// The HM-layer diagnostic should name `IO` as the missing effect and
// suggest annotating the enclosing function with `with IO`.

fn log_event(msg: String) -> Unit with IO {
    print(msg)
}

fn record_time() -> Unit with Time {
    let _ = now_ms()
    log_event("recorded")
}

fn main() with IO, Time {
    record_time()
}
